--- a/src/main/resources/assets/classic_adventure/lang/en_us.json
+++ b/src/main/resources/assets/classic_adventure/lang/en_us.json
@@ -1,4 +1,4 @@
 {
-  "selectWorld.gameMode.adventure.info": "Survival Mode, but you must use the correct tools to break blocks",
+  "selectWorld.gameMode.adventure.info": "Survival Mode, but you must use the correct tools to break blocks.",
   "item.classic_adventure.flint_axe": "Flint Axe"
 }
